src/com/bwang/metrics/gen/AthenaQueryParser.java
// Generated from C:\Users\e540766\01_Code\metrics_poc\src\com\bwang\metrics\modal\AthenaQuery.g4 by ANTLR 4.5.1

package com.bwang.metrics.gen;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AthenaQueryParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, TIME_UNIT=12, QUOTED2_STRING=13, QUOTED1_STRING=14, 
		ESC=15, K_AND=16, K_OR=17, K_UNLESS=18, K_BY=19, K_WITHOUT=20, K_KEEP_COMMON=21, 
		K_OFFSET=22, K_BETWEEN=23, K_SUM=24, K_AVG=25, K_COUNT=26, K_MIN=27, K_MAX=28, 
		K_STDDEV=29, K_STDVAR=30, K_TOPK=31, K_BOTTOMK=32, K_COUNT_VALUES=33, 
		NULL=34, TRUE=35, FALSE=36, INT=37, DOUBLE=38, BANG=39, AND=40, EQUALS=41, 
		OR=42, PLUS=43, MINUS=44, SLASH=45, STAR=46, LANGLE=47, RANGLE=48, DOLLAR=49, 
		ASK=50, COLON=51, LPAREN=52, RPAREN=53, DOT=54, IDENTIFIER=55, WS=56, 
		DIGIT=57;
	public static final int
		RULE_expr = 0, RULE_call = 1, RULE_argslist = 2, RULE_numberLiteral = 3, 
		RULE_identifierList = 4, RULE_aggregatorParam = 5, RULE_vectorSelector = 6, 
		RULE_matrixSelector = 7, RULE_labelMatcherList = 8, RULE_labelMatcher = 9, 
		RULE_offsetExpr = 10, RULE_rangeExpr = 11, RULE_from_time = 12, RULE_to_time = 13, 
		RULE_quoted_string = 14;
	public static final String[] ruleNames = {
		"expr", "call", "argslist", "numberLiteral", "identifierList", "aggregatorParam", 
		"vectorSelector", "matrixSelector", "labelMatcherList", "labelMatcher", 
		"offsetExpr", "rangeExpr", "from_time", "to_time", "quoted_string"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'=='", "'!='", "'<='", "'>='", "','", "'{'", "'}'", "'=~'", "'!~'", 
		"'['", "']'", null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"'null'", "'true'", "'false'", null, null, "'!'", "'and'", "'='", "'or'", 
		"'+'", "'-'", "'/'", "'*'", "'<'", "'>'", "'$'", "'?'", "':'", "'('", 
		"')'", "'.'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"TIME_UNIT", "QUOTED2_STRING", "QUOTED1_STRING", "ESC", "K_AND", "K_OR", 
		"K_UNLESS", "K_BY", "K_WITHOUT", "K_KEEP_COMMON", "K_OFFSET", "K_BETWEEN", 
		"K_SUM", "K_AVG", "K_COUNT", "K_MIN", "K_MAX", "K_STDDEV", "K_STDVAR", 
		"K_TOPK", "K_BOTTOMK", "K_COUNT_VALUES", "NULL", "TRUE", "FALSE", "INT", 
		"DOUBLE", "BANG", "AND", "EQUALS", "OR", "PLUS", "MINUS", "SLASH", "STAR", 
		"LANGLE", "RANGLE", "DOLLAR", "ASK", "COLON", "LPAREN", "RPAREN", "DOT", 
		"IDENTIFIER", "WS", "DIGIT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AthenaQuery.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AthenaQueryParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ParentEprContext extends ExprContext {
		public ExprContext parent;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ParentEprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AthenaQueryVisitor ) return ((AthenaQueryVisitor<? extends T>)visitor).visitParentEpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FunctionExprContext extends ExprContext {
		public CallContext call() {
			return getRuleContext(CallContext.class,0);
		}
		public FunctionExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AthenaQueryVisitor ) return ((AthenaQueryVisitor<? extends T>)visitor).visitFunctionExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StringExprContext extends ExprContext {
		public Quoted_stringContext quoted_string() {
			return getRuleContext(Quoted_stringContext.class,0);
		}
		public StringExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AthenaQueryVisitor ) return ((AthenaQueryVisitor<? extends T>)visitor).visitStringExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class UnaryExprContext extends ExprContext {
		public TerminalNode MINUS() { return getToken(AthenaQueryParser.MINUS, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public UnaryExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AthenaQueryVisitor ) return ((AthenaQueryVisitor<? extends T>)visitor).visitUnaryExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BinaryExpContext extends ExprContext {
		public ExprContext left;
		public Token op;
		public ExprContext right;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode K_AND() { return getToken(AthenaQueryParser.K_AND, 0); }
		public TerminalNode K_OR() { return getToken(AthenaQueryParser.K_OR, 0); }
		public TerminalNode K_UNLESS() { return getToken(AthenaQueryParser.K_UNLESS, 0); }
		public BinaryExpContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AthenaQueryVisitor ) return ((AthenaQueryVisitor<? extends T>)visitor).visitBinaryExp(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AggregateExpContext extends ExprContext {
		public Token aggregator;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode K_SUM() { return getToken(AthenaQueryParser.K_SUM, 0); }
		public TerminalNode K_AVG() { return getToken(AthenaQueryParser.K_AVG, 0); }
		public TerminalNode K_COUNT() { return getToken(AthenaQueryParser.K_COUNT, 0); }
		public TerminalNode K_MIN() { return getToken(AthenaQueryParser.K_MIN, 0); }
		public TerminalNode K_MAX() { return getToken(AthenaQueryParser.K_MAX, 0); }
		public TerminalNode K_STDDEV() { return getToken(AthenaQueryParser.K_STDDEV, 0); }
		public TerminalNode K_STDVAR() { return getToken(AthenaQueryParser.K_STDVAR, 0); }
		public AggregatorParamContext aggregatorParam() {
			return getRuleContext(AggregatorParamContext.class,0);
		}
		public TerminalNode INT() { return getToken(AthenaQueryParser.INT, 0); }
		public TerminalNode K_TOPK() { return getToken(AthenaQueryParser.K_TOPK, 0); }
		public TerminalNode K_BOTTOMK() { return getToken(AthenaQueryParser.K_BOTTOMK, 0); }
		public TerminalNode K_COUNT_VALUES() { return getToken(AthenaQueryParser.K_COUNT_VALUES, 0); }
		public AggregateExpContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AthenaQueryVisitor ) return ((AthenaQueryVisitor<? extends T>)visitor).visitAggregateExp(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MatrixSelectorExprContext extends ExprContext {
		public MatrixSelectorContext matrixSelector() {
			return getRuleContext(MatrixSelectorContext.class,0);
		}
		public MatrixSelectorExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AthenaQueryVisitor ) return ((AthenaQueryVisitor<? extends T>)visitor).visitMatrixSelectorExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VectorSelectorExprContext extends ExprContext {
		public VectorSelectorContext vectorSelector() {
			return getRuleContext(VectorSelectorContext.class,0);
		}
		public VectorSelectorExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AthenaQueryVisitor ) return ((AthenaQueryVisitor<? extends T>)visitor).visitVectorSelectorExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NumberExprContext extends ExprContext {
		public NumberLiteralContext numberLiteral() {
			return getRuleContext(NumberLiteralContext.class,0);
		}
		public NumberExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AthenaQueryVisitor ) return ((AthenaQueryVisitor<? extends T>)visitor).visitNumberExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 0;
		enterRecursionRule(_localctx, 0, RULE_expr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				_localctx = new UnaryExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(31);
				match(MINUS);
				setState(32);
				expr(16);
				}
				break;
			case 2:
				{
				_localctx = new AggregateExpContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(33);
				((AggregateExpContext)_localctx).aggregator = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << K_SUM) | (1L << K_AVG) | (1L << K_COUNT) | (1L << K_MIN) | (1L << K_MAX) | (1L << K_STDDEV) | (1L << K_STDVAR))) != 0)) ) {
					((AggregateExpContext)_localctx).aggregator = (Token)_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(35);
				_la = _input.LA(1);
				if (_la==K_BY || _la==K_WITHOUT) {
					{
					setState(34);
					aggregatorParam();
					}
				}

				setState(37);
				expr(8);
				}
				break;
			case 3:
				{
				_localctx = new ParentEprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(38);
				match(LPAREN);
				setState(39);
				((ParentEprContext)_localctx).parent = expr(0);
				setState(40);
				match(RPAREN);
				}
				break;
			case 4:
				{
				_localctx = new AggregateExpContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(42);
				((AggregateExpContext)_localctx).aggregator = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << K_SUM) | (1L << K_AVG) | (1L << K_COUNT) | (1L << K_MIN) | (1L << K_MAX) | (1L << K_STDDEV) | (1L << K_STDVAR))) != 0)) ) {
					((AggregateExpContext)_localctx).aggregator = (Token)_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(43);
				expr(0);
				setState(45);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(44);
					aggregatorParam();
					}
					break;
				}
				}
				break;
			case 5:
				{
				_localctx = new AggregateExpContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(47);
				((AggregateExpContext)_localctx).aggregator = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << K_TOPK) | (1L << K_BOTTOMK) | (1L << K_COUNT_VALUES))) != 0)) ) {
					((AggregateExpContext)_localctx).aggregator = (Token)_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(48);
				match(LPAREN);
				setState(49);
				match(INT);
				setState(50);
				match(T__4);
				setState(51);
				expr(0);
				setState(52);
				match(RPAREN);
				}
				break;
			case 6:
				{
				_localctx = new FunctionExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(54);
				call();
				}
				break;
			case 7:
				{
				_localctx = new VectorSelectorExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(55);
				vectorSelector();
				}
				break;
			case 8:
				{
				_localctx = new MatrixSelectorExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(56);
				matrixSelector();
				}
				break;
			case 9:
				{
				_localctx = new NumberExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(57);
				numberLiteral();
				}
				break;
			case 10:
				{
				_localctx = new StringExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(58);
				quoted_string();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(81);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(79);
					switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
					case 1:
						{
						_localctx = new BinaryExpContext(new ExprContext(_parentctx, _parentState));
						((BinaryExpContext)_localctx).left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(61);
						if (!(precpred(_ctx, 14))) throw new FailedPredicateException(this, "precpred(_ctx, 14)");
						setState(62);
						((BinaryExpContext)_localctx).op = match(K_AND);
						setState(63);
						((BinaryExpContext)_localctx).right = expr(15);
						}
						break;
					case 2:
						{
						_localctx = new BinaryExpContext(new ExprContext(_parentctx, _parentState));
						((BinaryExpContext)_localctx).left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(64);
						if (!(precpred(_ctx, 13))) throw new FailedPredicateException(this, "precpred(_ctx, 13)");
						setState(65);
						((BinaryExpContext)_localctx).op = match(K_OR);
						setState(66);
						((BinaryExpContext)_localctx).right = expr(14);
						}
						break;
					case 3:
						{
						_localctx = new BinaryExpContext(new ExprContext(_parentctx, _parentState));
						((BinaryExpContext)_localctx).left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(67);
						if (!(precpred(_ctx, 12))) throw new FailedPredicateException(this, "precpred(_ctx, 12)");
						setState(68);
						((BinaryExpContext)_localctx).op = match(K_UNLESS);
						setState(69);
						((BinaryExpContext)_localctx).right = expr(13);
						}
						break;
					case 4:
						{
						_localctx = new BinaryExpContext(new ExprContext(_parentctx, _parentState));
						((BinaryExpContext)_localctx).left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(70);
						if (!(precpred(_ctx, 11))) throw new FailedPredicateException(this, "precpred(_ctx, 11)");
						setState(71);
						((BinaryExpContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==SLASH || _la==STAR) ) {
							((BinaryExpContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						} else {
							consume();
						}
						setState(72);
						((BinaryExpContext)_localctx).right = expr(12);
						}
						break;
					case 5:
						{
						_localctx = new BinaryExpContext(new ExprContext(_parentctx, _parentState));
						((BinaryExpContext)_localctx).left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(73);
						if (!(precpred(_ctx, 10))) throw new FailedPredicateException(this, "precpred(_ctx, 10)");
						setState(74);
						((BinaryExpContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==PLUS || _la==MINUS) ) {
							((BinaryExpContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						} else {
							consume();
						}
						setState(75);
						((BinaryExpContext)_localctx).right = expr(11);
						}
						break;
					case 6:
						{
						_localctx = new BinaryExpContext(new ExprContext(_parentctx, _parentState));
						((BinaryExpContext)_localctx).left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(76);
						if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
						setState(77);
						((BinaryExpContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << LANGLE) | (1L << RANGLE))) != 0)) ) {
							((BinaryExpContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						} else {
							consume();
						}
						setState(78);
						((BinaryExpContext)_localctx).right = expr(10);
						}
						break;
					}
					} 
				}
				setState(83);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class CallContext extends ParserRuleContext {
		public Token callName;
		public TerminalNode LPAREN() { return getToken(AthenaQueryParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(AthenaQueryParser.RPAREN, 0); }
		public TerminalNode IDENTIFIER() { return getToken(AthenaQueryParser.IDENTIFIER, 0); }
		public ArgslistContext argslist() {
			return getRuleContext(ArgslistContext.class,0);
		}
		public CallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_call; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AthenaQueryVisitor ) return ((AthenaQueryVisitor<? extends T>)visitor).visitCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CallContext call() throws RecognitionException {
		CallContext _localctx = new CallContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_call);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			((CallContext)_localctx).callName = match(IDENTIFIER);
			setState(85);
			match(LPAREN);
			setState(87);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << QUOTED2_STRING) | (1L << QUOTED1_STRING) | (1L << K_SUM) | (1L << K_AVG) | (1L << K_COUNT) | (1L << K_MIN) | (1L << K_MAX) | (1L << K_STDDEV) | (1L << K_STDVAR) | (1L << K_TOPK) | (1L << K_BOTTOMK) | (1L << K_COUNT_VALUES) | (1L << INT) | (1L << DOUBLE) | (1L << MINUS) | (1L << LPAREN) | (1L << IDENTIFIER))) != 0)) {
				{
				setState(86);
				argslist();
				}
			}

			setState(89);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgslistContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ArgslistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argslist; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AthenaQueryVisitor ) return ((AthenaQueryVisitor<? extends T>)visitor).visitArgslist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgslistContext argslist() throws RecognitionException {
		ArgslistContext _localctx = new ArgslistContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_argslist);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			expr(0);
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(92);
				match(T__4);
				setState(93);
				expr(0);
				}
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumberLiteralContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(AthenaQueryParser.INT, 0); }
		public TerminalNode DOUBLE() { return getToken(AthenaQueryParser.DOUBLE, 0); }
		public NumberLiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numberLiteral; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AthenaQueryVisitor ) return ((AthenaQueryVisitor<? extends T>)visitor).visitNumberLiteral(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumberLiteralContext numberLiteral() throws RecognitionException {
		NumberLiteralContext _localctx = new NumberLiteralContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_numberLiteral);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_la = _input.LA(1);
			if ( !(_la==INT || _la==DOUBLE) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentifierListContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(AthenaQueryParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(AthenaQueryParser.IDENTIFIER, i);
		}
		public IdentifierListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifierList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AthenaQueryVisitor ) return ((AthenaQueryVisitor<? extends T>)visitor).visitIdentifierList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifierListContext identifierList() throws RecognitionException {
		IdentifierListContext _localctx = new IdentifierListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_identifierList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(IDENTIFIER);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(102);
				match(T__4);
				setState(103);
				match(IDENTIFIER);
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AggregatorParamContext extends ParserRuleContext {
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
